feat: Enhance audio processing and AI summary display
- **Database:** Added `document_id` to `audio_processing_results` table for linking audio processing jobs to generated documents.
- **Edge Function (`process-audio`):** Updated to accept and store `document_id` during initial record creation and to correctly handle `user_id` for RLS.
- **Note Editor (`NoteEditor.tsx`):**
    - Modified audio processing flow to create a `document` entry for audio files and pass its `id` to the Edge Function.
    - Ensured the note's `document_id` is updated with the processed audio's document ID.
    - Reworked AI summary section layout for responsiveness: now displays on the side in desktop view and as a slide-up panel in mobile view.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,28 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.56.2",
+    "@tiptap/extension-blockquote": "^2.25.0",
+    "@tiptap/extension-bold": "^2.25.0",
+    "@tiptap/extension-bullet-list": "^2.25.0",
+    "@tiptap/extension-code": "^2.25.0",
+    "@tiptap/extension-code-block": "^2.25.0",
+    "@tiptap/extension-document": "^2.25.0",
+    "@tiptap/extension-hard-break": "^2.25.0",
+    "@tiptap/extension-heading": "^2.25.0",
+    "@tiptap/extension-history": "^2.25.0",
+    "@tiptap/extension-horizontal-rule": "^2.25.0",
+    "@tiptap/extension-italic": "^2.25.0",
+    "@tiptap/extension-link": "^2.25.0",
+    "@tiptap/extension-list-item": "^2.25.0",
+    "@tiptap/extension-ordered-list": "^2.25.0",
+    "@tiptap/extension-paragraph": "^2.25.0",
+    "@tiptap/extension-strike": "^2.25.0",
+    "@tiptap/extension-table": "^2.25.0",
+    "@tiptap/extension-table-cell": "^2.25.0",
+    "@tiptap/extension-table-header": "^2.25.0",
+    "@tiptap/extension-table-row": "^2.25.0",
+    "@tiptap/react": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
     "caniuse-lite": "^1.0.30001726",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -69,6 +91,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
