--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "headers": [
           {
             "key": "Content-Type",
-            "value": "application/xml"
+            "value": "application/xml; charset=utf-8"
           }
         ]
       },
@@ -13,16 +13,10 @@
         "source": "/robots.txt",
         "headers": [
           {
-            "key": "Content-Type", 
-            "value": "text/plain"
+            "key": "Content-Type",
+            "value": "text/plain; charset=utf-8"
           }
         ]
-      }
-    ],
-    "rewrites": [
-      {
-        "source": "/((?!sitemap\\.xml|robots\\.txt|_next|static|favicon\\.ico).*)",
-        "destination": "/index.html"
       }
     ]
   }
