--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-    "public": true,
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
     "headers": [
       {
         "source": "/sitemap.xml",
@@ -18,22 +19,6 @@
             "value": "text/plain; charset=utf-8"
           }
         ]
-      }
-    ],
-    "routes": [
-      {
-        "src": "/sitemap.xml",
-        "dest": "/sitemap.xml",
-        "headers": {
-          "Content-Type": "application/xml; charset=utf-8"
-        }
-      },
-      {
-        "src": "/robots.txt",
-        "dest": "/robots.txt", 
-        "headers": {
-          "Content-Type": "text/plain; charset=utf-8"
-        }
       }
     ]
   }
