--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@tiptap/react": "^2.25.0",
     "@tiptap/starter-kit": "^2.25.0",
     "@types/uuid": "^10.0.0",
+    "@vercel/node": "^5.3.5",
     "caniuse-lite": "^1.0.30001726",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
