--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,15 @@
 {
     "rewrites": [
       {
-        "source": "/((?!sitemap\\.xml|robots\\.txt).*)",
+        "source": "/sitemap.xml",
+        "destination": "/api/sitemap.xml"
+      },
+      {
+        "source": "/(.*)",
         "destination": "/index.html"
       }
     ],
     "headers": [
-      {
-        "source": "/sitemap.xml",
-        "headers": [
-          {
-            "key": "Content-Type",
-            "value": "application/xml"
-          }
-        ]
-      },
       {
         "source": "/robots.txt",
         "headers": [
