--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "framer-motion": "^12.23.12",
     "hast-util-to-html": "^9.0.5",
     "highlight.js": "^11.11.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "mermaid": "^11.9.0",
     "next-themes": "^0.3.0",
