--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.4",
+    "supabase": "^2.34.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
