--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
+    "jsonlint-mod": "^1.7.6",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "mermaid": "^11.9.0",
