separated the chat

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.4",
     "supabase": "^2.34.3",
+    "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
