--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-syntax-highlighter": "^15.6.6",
+    "react-window": "^2.1.0",
     "recharts": "^2.12.7",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
