--- a/package.json
+++ b/package.json
@@ -43,28 +43,23 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.56.2",
-    "@tiptap/extension-blockquote": "^2.25.0",
     "@tiptap/extension-bold": "^2.25.0",
     "@tiptap/extension-bullet-list": "^2.25.0",
-    "@tiptap/extension-code": "^2.25.0",
-    "@tiptap/extension-code-block": "^2.25.0",
-    "@tiptap/extension-document": "^2.25.0",
+    "@tiptap/extension-code-block-lowlight": "^2.27.1",
     "@tiptap/extension-hard-break": "^2.25.0",
     "@tiptap/extension-heading": "^2.25.0",
-    "@tiptap/extension-history": "^2.25.0",
-    "@tiptap/extension-horizontal-rule": "^2.25.0",
+    "@tiptap/extension-image": "^2.27.1",
     "@tiptap/extension-italic": "^2.25.0",
-    "@tiptap/extension-link": "^2.25.0",
-    "@tiptap/extension-list-item": "^2.25.0",
-    "@tiptap/extension-ordered-list": "^2.25.0",
-    "@tiptap/extension-paragraph": "^2.25.0",
-    "@tiptap/extension-strike": "^2.25.0",
-    "@tiptap/extension-table": "^2.25.0",
-    "@tiptap/extension-table-cell": "^2.25.0",
-    "@tiptap/extension-table-header": "^2.25.0",
-    "@tiptap/extension-table-row": "^2.25.0",
-    "@tiptap/react": "^2.25.0",
-    "@tiptap/starter-kit": "^2.25.0",
+    "@tiptap/extension-link": "^2.27.1",
+    "@tiptap/extension-placeholder": "^2.27.1",
+    "@tiptap/extension-table": "^2.27.1",
+    "@tiptap/extension-table-cell": "^2.27.1",
+    "@tiptap/extension-table-header": "^2.27.1",
+    "@tiptap/extension-table-row": "^2.27.1",
+    "@tiptap/extension-text-align": "^2.27.1",
+    "@tiptap/extension-underline": "^2.27.1",
+    "@tiptap/react": "^2.27.1",
+    "@tiptap/starter-kit": "^2.27.1",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/node": "^5.3.5",
@@ -92,6 +87,7 @@
     "react-hook-form": "^7.53.0",
     "react-lowlight": "^3.1.0",
     "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-syntax-highlighter": "^15.6.6",
@@ -100,14 +96,19 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "sonner": "^1.7.4",
     "supabase": "^2.34.3",
     "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
-    "turndown": "^7.2.0",
+    "turndown": "^7.2.2",
+    "turndown-plugin-gfm": "^1.0.2",
+    "unified": "^11.0.5",
     "uuid": "^10.0.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
