--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-lowlight": "^3.1.0",
