--- a/vercel.json
+++ b/vercel.json
@@ -10,29 +10,24 @@
       ]
     },
     {
-      "source": "/favicon.ico",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "image/x-icon"
-        }
-      ]
-    },
-    {
       "source": "/sitemap.xml",
       "headers": [
         {
           "key": "Content-Type",
           "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, s-maxage=3600"
         }
       ]
     },
     {
-      "source": "/(.*)",
+      "source": "/static/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, s-maxage=0, must-revalidate"
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
@@ -41,54 +36,6 @@
     {
       "source": "/sitemap.xml",
       "destination": "/api/sitemap"
-    },
-    {
-      "source": "/privacy-policy",
-      "destination": "/privacy-policy"
-    },
-    {
-      "source": "/about-us",
-      "destination": "/about-us"
-    },
-    {
-      "source": "/contact",
-      "destination": "/contact"
-    },
-    {
-      "source": "/blogs",
-      "destination": "/blogs"
-    },
-    {
-      "source": "/integrations",
-      "destination": "/integrations"
-    },
-    {
-      "source": "/terms-of-service",
-      "destination": "/terms-of-service"
-    },
-    {
-      "source": "/careers",
-      "destination": "/careers"
-    },
-    {
-      "source": "/api",
-      "destination": "/api"
-    },
-    {
-      "source": "/documentation-page",
-      "destination": "/documentation-page"
-    },
-    {
-      "source": "/user-guide-page",
-      "destination": "/user-guide-page"
-    },
-    {
-      "source": "/auth",
-      "destination": "/auth"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/"
     }
   ]
 }
