--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "mermaid": "^11.9.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "^18.3.1",
