--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "@tiptap/extension-bold": "^2.25.0",
     "@tiptap/extension-bullet-list": "^2.25.0",
     "@tiptap/extension-code-block-lowlight": "^2.27.1",
+    "@tiptap/extension-color": "^2.27.1",
     "@tiptap/extension-hard-break": "^2.25.0",
     "@tiptap/extension-heading": "^2.25.0",
+    "@tiptap/extension-highlight": "^2.27.1",
     "@tiptap/extension-image": "^2.27.1",
     "@tiptap/extension-italic": "^2.25.0",
     "@tiptap/extension-link": "^2.27.1",
@@ -57,6 +59,7 @@
     "@tiptap/extension-table-header": "^2.27.1",
     "@tiptap/extension-table-row": "^2.27.1",
     "@tiptap/extension-text-align": "^2.27.1",
+    "@tiptap/extension-text-style": "^2.27.1",
     "@tiptap/extension-underline": "^2.27.1",
     "@tiptap/react": "^2.27.1",
     "@tiptap/starter-kit": "^2.27.1",
