feat: Add online status handling and improve user experience during offline mode
- Implemented `useOnlineStatus` hook to monitor network connectivity.
- Added offline notifications in `PodcastsPage` and `SocialFeed` components to inform users when they are offline.
- Enhanced `Index` page to display a network error message and retry option when offline.
- Updated context and reducer to manage pending attachments more effectively.
- Improved message handling to support image URLs in Markdown format.
- Enhanced podcast generation logic to dynamically determine visual concepts based on content segments.
- Refactored prompt-engine rules to ensure consistent image formatting in responses.

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@tiptap/starter-kit": "^2.27.1",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
-    "@vercel/node": "^5.5.15",
+    "@vercel/node": "^4.0.0",
     "caniuse-lite": "^1.0.30001726",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
@@ -80,9 +80,9 @@
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "jsonlint-mod": "^1.7.6",
-    "jspdf": "^3.0.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.462.0",
-    "mermaid": "^11.9.0",
+    "mermaid": "^10.9.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.1",
@@ -129,6 +129,7 @@
     "@types/three": "^0.178.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
