--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "turndown": "^7.2.2",
     "turndown-plugin-gfm": "^1.0.2",
     "unified": "^11.0.5",
+    "usehooks-ts": "^3.1.1",
     "uuid": "^10.0.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
